# tcbBackEnd

./: build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
favorites/: models.py  serializer.py  urls.py  views.py
favorites/migrations/: 0001_initial.py
messaging/: models.py  serializer.py  urls.py  views.py
messaging/migrations/: 0001_initial.py  0002_alter_messages_content.py  0003_alter_messages_content.py  0004_alter_messages_content.py  0005_alter_messages_content.py
recipeCollections/: apps.py  models.py  serializer.py  urls.py  views.py
recipeCollections/migrations/: 0001_initial.py  0002_collectionrating.py  0003_collections_published.py  0004_alter_collections_published.py
recipes/: models.py  serializers.py  urls.py  util.py  views.py
recipes/migrations/: 0001_initial.py  0002_ingredients_quantity_type.py  0003_recipes_user_saverecipes.py  0004_rename_saverecipes_savedrecipes.py  0005_recipes_image.py  0006_alter_ingredients_quantity.py  0007_cart.py  0008_alter_ingredients_recipe.py  0009_recipes_category_recipes_cook_time_recipes_servings_and_more.py  0010_alter_recipes_category.py  0011_alter_recipes_description.py  0012_alter_recipes_cook_time_alter_recipes_servings.py  0015_auto_20240509_2332.py  (+2 more)
shoppingList/: apps.py  models.py  serializers.py  urls.py  util.py  views.py
social/: models.py  serializer.py  urls.py  views.py
tcbBackEnd/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
ususers/: apps.py  models.py  serializers.py  urls.py  views.py
websocket_app/: consumers.py  routing.py  urls.py  views.py
(+8 files in other folders)
