[tool.poetry]
name = "the-good-cook-book"
version = "0.1.0"
description = "backend db"
authors = ["Thomas Angotti <tom.angotti11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.13"
package-name = "^0.1"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
