[tool.poetry]
name = "the-good-cook-book"
version = "0.1.0"
description = "backend db"
authors = ["Thomas Angotti <tom.angotti11@gmail.com>"]


[tool.poetry.dependencies]
python = "3.8"
django = "^4.2.7"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"

